--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "cli-progress": "^3.3.1",
+    "cli-table3": "^0.5.1",
     "fast-csv": "^3.4.0",
+    "humanize-duration": "^3.21.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.10"
+    "mongoose": "^5.7.10",
+    "xml2js": "^0.4.22"
   },
   "devDependencies": {},
   "scripts": {
