--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "babar": "^0.2.0",
     "cli-progress": "^3.3.1",
     "cli-table3": "^0.5.1",
     "fast-csv": "^3.4.0",
