--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "import": "DB_HOST=127.0.0.1 DB_PORT=27017 node --max-old-space-size=3096 --experimental-worker ./app/import/index.js",
-    "inspect": "DB_HOST=127.0.0.1 DB_PORT=27017 node  ./app/details.js"
+    "inspect": "node ./app/details.js"
   },
   "author": "",
   "license": "ISC"
