--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,16 @@ services:
       - ${DB_PATH}:/data/db
     ports:
       - 27017:27017
-  # app:
-  #   build: ./
-  #   # environment:
-  #   #   TOKEN: ${TOKEN}
-  #   ports:
-  #     - 4000:3001
-  #   volumes:
-  #     - ./:/usr/src/app
-  #     - /usr/src/app/node_modules
-  #   depends_on:
-  #     - db
-  #   command: ["./wait-for-it.sh", "db:27017", "--", "npm", "run", "dev"]
+  app:
+    build: ./
+    environment:
+      DB_HOST: 'db'
+    ports:
+      - 4000:3000
+    volumes:
+      - ./:/usr/src/app
+      # - /usr/src/app/node_modules
+    depends_on:
+      - db
+    command: ["./wait-for-it.sh", "db:27017", "--", "npm", "start"]
+    # command: ["./wait-for-it.sh", "db:27017"]
