--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@vue/cli-service": "^4.0.5",
     "babar": "^0.2.0",
     "cli-progress": "^3.3.1",
     "cli-table3": "^0.5.1",
@@ -11,6 +12,7 @@
     "express": "^4.17.1",
     "fast-csv": "^3.4.0",
     "humanize-duration": "^3.21.0",
+    "lowdb": "^1.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.10",
     "sprintf-js": "^1.1.2",
