--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "lowdb": "^1.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.10",
+    "pm2": "^4.1.2",
     "sprintf-js": "^1.1.2",
     "targz": "^1.0.1",
     "xml2js": "^0.4.22"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  },
   "scripts": {
-    "start": "node app/index.js",
+    "start": "nodemon app/index.js --ignore db.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "freeflow": "node ./app/free-flow/index.js",
-    "inspect": "node ./app/details.js"
+    "inspect": "node ./app/details.js",
+    "pm2": "pm2",
+    "dev": "nodemon app/index.js --ignore db.json"
   },
   "author": "",
   "license": "ISC"
