--- a/package.json
+++ b/package.json
@@ -15,23 +15,26 @@
   },
   "dependencies": {
     "@vue/cli-service": "^4.0.5",
+    "axios": "^0.19.0",
     "babar": "^0.2.0",
     "cli-progress": "^3.3.1",
     "cli-table3": "^0.5.1",
+    "cors": "^2.8.5",
     "download-file-with-progressbar": "^1.2.3",
+    "element-ui": "^2.12.0",
     "express": "^4.17.1",
     "fast-csv": "^3.4.0",
     "humanize-duration": "^3.21.0",
     "lowdb": "^1.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.10",
+    "nodemon": "^1.19.4",
     "pm2": "^4.1.2",
     "sprintf-js": "^1.1.2",
     "targz": "^1.0.1",
-    "xml2js": "^0.4.22",
-    "nodemon": "^1.19.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "xml2js": "^0.4.22"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
