--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-service": "^4.0.5",
     "axios": "^0.19.0",
     "babar": "^0.2.0",
+    "chart.js": "^2.9.3",
     "cli-progress": "^3.3.1",
     "cli-table3": "^0.5.1",
     "cors": "^2.8.5",
@@ -33,6 +34,7 @@
     "sprintf-js": "^1.1.2",
     "targz": "^1.0.1",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.0.1",
     "xml2js": "^0.4.22"
   },
