--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage"
   },
   "dependencies": {
-    "@vue/cli-service": "^4.0.5",
-    "axios": "^0.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "lowdb": "^1.0.0"
+  },
+  "devDependencies": {
     "babar": "^0.2.0",
     "chart.js": "^2.9.3",
     "cli-progress": "^3.3.1",
     "cli-table3": "^0.5.1",
-    "cors": "^2.8.5",
     "download-file-with-progressbar": "^1.2.3",
     "element-ui": "^2.12.0",
-    "express": "^4.17.1",
     "fast-csv": "^3.4.0",
     "humanize-duration": "^3.21.0",
-    "lowdb": "^1.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.10",
     "nodemon": "^1.19.4",
     "pm2": "^4.1.2",
     "sprintf-js": "^1.1.2",
     "targz": "^1.0.1",
-    "vue": "^2.5.2",
+    "xml2js": "^0.4.22",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.0.1",
-    "xml2js": "^0.4.22"
-  },
-  "devDependencies": {
+    "vue": "^2.5.2",
+    "axios": "^0.19.0",
+    "@vue/cli-service": "^4.0.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -87,6 +87,8 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "shipit": "^1.2.0",
+    "shipit-deploy": "^5.1.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-cli-plugin-express": "^1.0.2",
