--- a/package.json
+++ b/package.json
@@ -21,27 +21,10 @@
     "lowdb": "^1.0.0"
   },
   "devDependencies": {
-    "babar": "^0.2.0",
-    "chart.js": "^2.9.3",
-    "cli-progress": "^3.3.1",
-    "cli-table3": "^0.5.1",
-    "download-file-with-progressbar": "^1.2.3",
-    "element-ui": "^2.12.0",
-    "fast-csv": "^3.4.0",
-    "humanize-duration": "^3.21.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.10",
-    "nodemon": "^1.19.4",
-    "pm2": "^4.1.2",
-    "sprintf-js": "^1.1.2",
-    "targz": "^1.0.1",
-    "xml2js": "^0.4.22",
-    "vue-chartjs": "^3.5.0",
-    "vue-router": "^3.0.1",
-    "vue": "^2.5.2",
-    "axios": "^0.19.0",
     "@vue/cli-service": "^4.0.5",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.19.0",
+    "babar": "^0.2.0",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -56,10 +39,15 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
+    "chart.js": "^2.9.3",
     "chromedriver": "^2.27.2",
+    "cli-progress": "^3.3.1",
+    "cli-table3": "^0.5.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "download-file-with-progressbar": "^1.2.3",
+    "element-ui": "^2.12.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -70,15 +58,21 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fast-csv": "^3.4.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "humanize-duration": "^3.21.0",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.10",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "nodemon": "^1.19.4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "pm2": "^4.1.2",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
@@ -89,17 +83,24 @@
     "shelljs": "^0.7.6",
     "shipit": "^1.2.0",
     "shipit-deploy": "^5.1.0",
+    "sprintf-js": "^1.1.2",
+    "targz": "^1.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue": "^2.5.2",
+    "vue-chartjs": "^3.5.0",
     "vue-cli-plugin-express": "^1.0.2",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
+    "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": ">=3.1.11",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "xml2js": "^0.4.22"
   },
   "browserslist": [
     "> 1%",
