improve toLowDb.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "A Vue.js project",
-  "author": "Tony <tony@courcasa.com>",
+  "author": "Tony <cstony0917@gmail.com>",
   "scripts": {
     "build": "node build/build.js",
     "test": "npm run unit && npm run e2e",
